[gd_scene load_steps=2 format=3 uid="uid://cqkiiqc8l7616"]

[ext_resource type="Script" path="res://assets/scripts/ui/system/context_menu/ContextMenu.gd" id="1_ka1ag"]

[node name="ContextMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ka1ag")

[node name="MainContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Panel" type="Panel" parent="MainContainer"]
layout_mode = 2

[node name="ButtonContainer" type="MarginContainer" parent="MainContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/ButtonContainer"]
layout_mode = 2

[connection signal="mouse_entered" from="MainContainer/Panel" to="." method="_on_panel_mouse_entered"]
[connection signal="mouse_exited" from="MainContainer/Panel" to="." method="_on_panel_mouse_exited"]
